--- a/generalStyle.css
+++ b/generalStyle.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: Rubik;
-  src: url("../assets/fonts/Rubik/Rubik-Regular.ttf");
+  src: url("/assets/fonts/Rubik/Rubik-Regular.ttf");
   font-weight: 500;
 }
 
 @font-face {
   font-family: Rubik;
-  src: url("../assets/fonts/Rubik/Rubik-Bold.ttf");
+  src: url("/assets/fonts/Rubik/Rubik-Bold.ttf");
   font-weight: 800;
 }
 
@@ -19,7 +19,7 @@ body {
   font-family: "Rubik";
   direction: rtl;
   color: white;
-  background-image: url("../assets/images/general/bg.svg");
+  background-image: url("/assets/images/general/bg.svg");
   background-size: 100% 100%;
   background-repeat: no-repeat;
   overflow: hidden;
@@ -97,7 +97,7 @@ body {
   background-size: cover;
   position: relative;
   z-index: 1;
-  background-image: url("../assets/images/practice/finishPractice_popup.svg");
+  background-image: url("/assets/images/practice/finishPractice_popup.svg");
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -131,7 +131,7 @@ body {
 }
 
 .page.exam .end-exam .title-popup {
-   background-image: url("../assets/images/exam/name_bg.svg");
+   background-image: url("/assets/images/exam/name_bg.svg");
 }
 
 .page .popup-sub-titles {
@@ -274,7 +274,7 @@ body {
   background-size: cover;
   position: relative;
   z-index: 1;
-  background-image: url("../assets/images/exam/beforeExam_popup/beforeExam_popup.svg");
+  background-image: url("/assets/images/exam/beforeExam_popup/beforeExam_popup.svg");
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -373,7 +373,7 @@ body {
   background-size: cover;
   position: relative;
   z-index: 1;
-  background-image: url("../assets/images/general/leavePracticeOrExam_popup/leavePracticeOrExam_popup.svg");
+  background-image: url("/assets/images/general/leavePracticeOrExam_popup/leavePracticeOrExam_popup.svg");
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -400,7 +400,7 @@ body {
   background-size: cover;
   position: relative;
   z-index: 1;
-  background-image: url("../assets/images/learning/choosePractice_popup/choosePractice_popup.svg");
+  background-image: url("/assets/images/learning/choosePractice_popup/choosePractice_popup.svg");
   display: flex;
   flex-direction: column;
   justify-content: space-between;
