--- a/learning.css
+++ b/learning.css
@@ -1,5 +1,5 @@
 .page.learning.subjects .title {
-  background-image: url(../assets/images/learning/home_header.svg);
+  background-image: url(/assets/images/learning/home_header.svg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   color: #3a0606;
@@ -33,7 +33,7 @@
 }
 
 .page.learning.subjects .learningCard {
-  background-image: url("../assets/images/learning/subject_btn.svg");
+  background-image: url("/assets/images/learning/subject_btn.svg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   height: 12em;
@@ -111,7 +111,7 @@
   color: #3a0606;
   position: relative;
   z-index: 1;
-  background-image: url("../assets/images/practice/beforePractice_popup/beforePractice_popup.svg");
+  background-image: url("/assets/images/practice/beforePractice_popup/beforePractice_popup.svg");
   display: flex;
   flex-direction: column;
   /* justify-content: space-between; */
@@ -193,7 +193,7 @@
 }
 
 .page.learning.content>.title {
-  background-image: url(../assets/images/learning/home_header.svg);
+  background-image: url(/assets/images/learning/home_header.svg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   color: #3a0606;
@@ -321,7 +321,7 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  background-image: url("../assets/images/learning/learning.svg");
+  background-image: url("/assets/images/learning/learning.svg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
